--- a/contents/javascript/html/step01.html
+++ b/contents/javascript/html/step01.html
@@ -24,7 +24,7 @@
     <p>Java ScriptはWebで使われるプログラミング言語です。さっそく学んでいきましょう。</p>
 
     <h2 id="ID_H2_02">とにかく書いてみる</h2>
-    まずはこのように書いてみます。
+    <p>まずはこのように書いてみます。</p>
     <pre class="code01"><code>
   &lt;p&gt;--- --- --- --- --- --- --- --- --- ---&lt;/p&gt;
   &lt;p id="ID_STEP01"&gt;xxxx&lt;/p&gt;
