--- a/contents/javascript/index.html
+++ b/contents/javascript/index.html
@@ -9,6 +9,7 @@
     <h1>はじめてのJava Script</h1>
     <ol>
       <li><a href="./html/step01.html">はじめてのJavaScript</a></li>
+      <li><a href="./html/step02.html">JavaScriptファイルの読み込み</a></li>
     </ol>
 
     <div>
