--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="tab_content" id="ID_TAB01_CONTENTS">
           <div class="tab_content_description">
             <h2>レゴで遊ぼうコンテンツ</h2>
-            <table>
+            <table style="width:80%;">
               <tbody>
                 <tr>
                     <th style="width: 50%;">レゴ写真館</th>
@@ -69,7 +69,7 @@
         <div class="tab_content" id="ID_TAB02_CONTENTS">
           <div class="tab_content_description">
             <h2>レゴで学ぼうコンテンツ</h2>
-            <table>
+            <table style="width:80%;">
               <tbody>
                 <tr>
                     <th style="width: 30%;">HTMLを学ぶ</th>
@@ -78,16 +78,17 @@
                 </tr>
                 <tr>
                   <td><a href="./contents/html/index.html"><img width=100% src="./contents/images/pictures/オリジナル01.jpg" alt="html"></a></td>
-                  <td><a href="./contents/javascript/html/step01.html"><img width=100% src="./contents/images/pictures/ドラゴンボート01.jpg" alt="javascript"></a></td>
+                  <td><a href="./contents/javascript/index.html"><img width=100% src="./contents/images/pictures/ドラゴンボート01.jpg" alt="javascript"></a></td>
                   <td><a href="./contents/index.html"><img width=100% src="./contents/images/pictures/泥棒と警察01.jpg" alt="その他"></a></td>
                 </tr>
                 <tr>
                   <td style="text-align:center;"><a href="./contents/html/index.html">入口</a></td>
-                  <td style="text-align:center;"><a href="./contents/javascript/html/step01.html">入口</a></td>
+                  <td style="text-align:center;"><a href="./contents/javascript/index.html">入口</a></td>
                   <td style="text-align:center;"><a href="./contents/index.html">入口</a></td>
                 </tr>
               </tbody>
             </table>
+
           </div>
         </div>
 
