--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-./icon/<!DOCTYPE html>
+<!DOCTYPE html>
 <html id="ID_HTML" prefix="og: http://ogp.me/ns#" lang="ja" dir="ltr">
   <head>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-164123953-2"></script>
