--- a/contents/javascript/index.html
+++ b/contents/javascript/index.html
@@ -10,6 +10,7 @@
     <ol>
       <li><a href="./html/step01.html">はじめてのJavaScript</a></li>
       <li><a href="./html/step02.html">JavaScriptファイルの読み込み</a></li>
+      <li><a href="./html/step03.html">Java Scriptを使ったHTMLフッター</a></li>
     </ol>
 
     <div>
