--- a/contents/javascript/index.html
+++ b/contents/javascript/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="../../css/style.css">
     <meta charset="utf-8">
     <title>サイトマップJava Script学習編</title>
+    <script type="text/javascript" src="../../js/common.js"></script>
   </head>
   <body>
     <h1>はじめてのJava Script</h1>
@@ -11,11 +12,11 @@
       <li><a href="./html/step01.html">はじめてのJavaScript</a></li>
       <li><a href="./html/step02.html">JavaScriptファイルの読み込み</a></li>
       <li><a href="./html/step03.html">Java Scriptを使ったHTMLフッター</a></li>
+      <li><a href="./html/step04.html">Java Scriptを使ったHTML目次生成</a></li>
     </ol>
 
-    <div>
-      <hr><br><br>
-      <p class="guide_area_bottom">[<a href="../../index.html">HOMEへ戻る</a>]</p>
+    <div id="ID_FOOTER">
+      <script>create_footer("ID_FOOTER",2)</script>
     </div>
 
   </body>
