--- a/contents/javascript/index.html
+++ b/contents/javascript/index.html
@@ -13,6 +13,7 @@
       <li><a href="./html/step02.html">JavaScriptファイルの読み込み</a></li>
       <li><a href="./html/step03.html">Java Scriptを使ったHTMLフッター</a></li>
       <li><a href="./html/step04.html">Java Scriptを使ったHTML目次生成</a></li>
+      <li><a href="./html/step05.html">Java Scriptを使ったMETAタグ生成</a></li>
     </ol>
 
     <div id="ID_FOOTER">
