--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:type" content="websites">
     <meta property="og:image" content="https://lego-san.github.io/icon/先生01.jpg">
     <meta property="og:url" content="https://lego-san.github.io/">
-    <meta property="og:description" content=”Lego遊びを通じて写真・Gifアニメーション・HTML・プログラミングを学んでます。プログラミングは初心者から中級車向けの情報です。”>
+    <meta property="og:description" content=”Lego遊びを通じて写真・Gifアニメーション・HTML・プログラミングを学んでます。プログラミングは初心者から中級者向けの情報です。”>
     <meta property="og:site_name" content="Legoで遊びながら初心者がプログラミングを学ぶ">
     <script data-ad-client="ca-pub-1887985620435579" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </head>
