--- a/contents/javascript/html/step05.html
+++ b/contents/javascript/html/step05.html
@@ -60,8 +60,9 @@
 
     <div id="ID_FOOTER">
       <script>
-        create_footer("ID_FOOTER",3);
         create_meta();
+        create_contents_list("ID_CONTENTS_LIST");
+        create_footer("ID_FOOTER",3);
       </script>
     </div>
 
