--- a/contents/html/step/step09.html
+++ b/contents/html/step/step09.html
@@ -18,6 +18,6 @@
     <p>Gifアニメーションも掲載します。</p>
     <img src="../../images/animations/強風01.gif" alt="強風アニメーション">
     <p>ビデオ動画も掲載します。</p>
-    <video src="../step08/images/テストファイル.mp4" controls playsinline muted></video>
+    <video src="../video/images/テストファイル.mp4" controls playsinline muted></video>
   </body>
 </html>
