--- a/contents/html/index.html
+++ b/contents/html/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>HTMLを学ぶ</h1>
+    <h2>基礎編</h2>
     <ol>
       <li><a href="./step01/index.html">まずはHTMLで文章を書いてみる</a></li>
       <li><a href="./step02/index.html">文字に色を付けてみる</a></li>
@@ -15,10 +16,14 @@
       <li><a href="./step05/index.html">レイアウトについて学んでみる</a></li>
       <li><a href="./step06/index.html">画像の張り方について学んでみる</a></li>
       <li><a href="./step07/index.html">GIFアニメーションを張り付けてみる</a></li>
-      <li><a href="./step08/index.html">MP4を再生してみる</a></li>
+      <li><a href="./video/video.html">MP4を再生してみる</a></li>
       <li><a href="./step09/index.html">表を作ってみる</a></li>
       <li><a href="./border-style/border-style.html">いろんな種類の枠線を使ってみる</a></li>
       <li><a href="./reference/index.html">参考ページのリンク集</a></li>
+    </ol>
+    <h2>トラブルシューティング</h2>
+    <ol>
+      <li><a href="./chrome-video/video.html">>Google Chromeで動画が再生できない</a></li>
     </ol>
 
     <div>
