--- a/contents/html/video/video.html
+++ b/contents/html/video/video.html
@@ -4,27 +4,18 @@
     <link rel="stylesheet" href="../../../css/style.css">
     <meta charset="utf-8">
     <title>HTMLのvideoタグの使い方</title>
-    <style media="screen">
-      table {
-        width: 50%;
-      }
-      video {
-        width: 100%;
-      }
-    </style>
+    <script type="text/javascript" src="../../../js/common.js"></script>
+    <meta property="og:title" content="Google Chromeで動画が再生できない!!">
+    <meta property="og:type" content="article">
+    <meta property="og:image" content="https://lego-san.github.io/icon/ミニフィグ01.jpg">
+    <meta property="og:url" content="https://lego-san.github.io/contens/html">
+    <meta property="og:description" content=”Lego遊びを通じて写真・Gifアニメーション・HTML・プログラミングを学んでます。プログラミングは初心者から中級者向けの情報です。”>
+    <meta property="og:site_name" content="Chromeで動画が再生できない...">
   </head>
   <body>
     <h1 id="ID_TITLE">MP4を再生してみる</h1>
     <h2 id="ID_CONTENTS">目次</h2>
-    <ol>
-      <li><a href="#ID_H2_01">MP4の再生方法</a></li>
-      <li><a href="#ID_H2_02">操作パネルの表示</a></li>
-      <li><a href="#ID_H2_03">ビデオの自動再生</a></li>
-      <li><a href="#ID_H2_04">ビデオのループ再生</a></li>
-      <li><a href="#ID_H2_05">ビデオのインライン再生</a></li>
-      <li><a href="#ID_H2_06">スマホ向けの注意点</a></li>
-      <li><a href="#ID_SRC">今回作成したページのHTMLコード</a></li>
-    </ol>
+    <div id="ID_CONTENTS_LIST"></div>
 
     <h2 id="ID_H2_01">MP4の再生方法</h2>
     <p>HTML上でのMP4を再生はvideoタグを使えばいいようです。</p>
@@ -122,13 +113,16 @@
     <img width=300px src="../../../icon/先生02.jpg" alt="こちら">
     <p>HTMLコードは<a href="https://github.com/lego-san/lego-san.github.io/blob/master/contents/html/step/step08.html">こちら</a></p>
 
-    <h2>感想</h2>
+    <h2 id="ID_COMMENT">感想</h2>
     <p>動画の再生ができるようになりました。あとは動画のコンテンツを整えないといけませんね。</p>
 
-    <div>
-      <hr><br><br>
-      <p class="guide_area_bottom">[<a href="#ID_TITLE">ページ上に戻る</a>] / [<a href="#ID_CONTENTS">目次に戻る</a>] / [<a href="../../../index.html">HOMEへ戻る</a>]</p>
-    </div>
+    <div id="ID_FOOTER"></div>
+
+    <script>
+      //create_meta();
+      create_contents_list("ID_CONTENTS_LIST");
+      create_footer("ID_FOOTER",3);
+    </script>
 
   </body>
 </html>
