--- a/contents/html/video/video.html
+++ b/contents/html/video/video.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8">
     <title>HTMLのvideoタグの使い方</title>
     <script type="text/javascript" src="../../../js/common.js"></script>
-    <meta property="og:title" content="Google Chromeで動画が再生できない!!">
+    <meta property="og:title" content="HTMLのvideoタグの使い方">
     <meta property="og:type" content="article">
     <meta property="og:image" content="https://lego-san.github.io/icon/ミニフィグ01.jpg">
     <meta property="og:url" content="https://lego-san.github.io/contens/html">
     <meta property="og:description" content=”Lego遊びを通じて写真・Gifアニメーション・HTML・プログラミングを学んでます。プログラミングは初心者から中級者向けの情報です。”>
-    <meta property="og:site_name" content="Chromeで動画が再生できない...">
+    <meta property="og:site_name" content="videoタグの使い方">
   </head>
   <body>
     <h1 id="ID_TITLE">MP4を再生してみる</h1>
