--- a/contents/google_analytics/step02/howtosetup.html
+++ b/contents/google_analytics/step02/howtosetup.html
@@ -5,6 +5,12 @@
     <meta charset="utf-8">
     <meta property="og:type" content="article">
     <title>Google Analyticsをブログに設定する</title>
+    <meta property="og:title" content="Google Analytics">
+    <meta property="og:image" content="https://lego-san.github.io/icon/ミニフィグ01.jpg">
+    <meta property="og:url" content="https://lego-san.github.io/contens/google_analytics/howtosetup.html">
+    <meta property="og:description" content=”Lego遊びを通じて写真・Gifアニメーション・HTML・プログラミングを学んでます。プログラミングは初心者から中級者向けの情報です。”>
+    <meta property="og:site_name" content="Legoで遊ぼう/学ぼう">
+
   </head>
   <body>
     <h1 id="ID_TITLE">もっと細かいアクセス解析をして人気のあるサイトにしたい!!</h1>
