--- a/contents/html/index.html
+++ b/contents/html/index.html
@@ -18,12 +18,12 @@
       <li><a href="./step07/index.html">GIFアニメーションを張り付けてみる</a></li>
       <li><a href="./video/video.html">MP4を再生してみる</a></li>
       <li><a href="./step09/index.html">表を作ってみる</a></li>
-      <li><a href="./border-style/border-style.html">いろんな種類の枠線を使ってみる</a></li>
+      <li><a href="./border_style/border_style.html">いろんな種類の枠線を使ってみる</a></li>
       <li><a href="./reference/index.html">参考ページのリンク集</a></li>
     </ol>
     <h2>トラブルシューティング</h2>
     <ol>
-      <li><a href="./chrome-video/video.html">>Google Chromeで動画が再生できない</a></li>
+      <li><a href="./chrome_video/chrome_video.html">Google Chromeで動画が再生できない</a></li>
     </ol>
 
     <div>
