--- a/contents/html/chrome_video/chrome_video.html
+++ b/contents/html/chrome_video/chrome_video.html
@@ -13,7 +13,7 @@
     <meta property="og:site_name" content="Chromeで動画が再生できない...">
   </head>
   <body>
-    <h1 id="ID_TITLE">title</h1>
+    <h1 id="ID_TITLE">Google Chromeで動画が再生できない</h1>
     <h2 id="ID_CONTENTS">目次</h2>
     <div id="ID_CONTENTS_LIST"></div>
 
