--- a/contents/images/index_pictures.html
+++ b/contents/images/index_pictures.html
@@ -5,28 +5,76 @@
     <meta charset="utf-8">
     <meta property="og:type" content="article">
     <title>Legoで写真遊び</title>
+    <style media="screen">
+      table {
+        border: 3px double black;
+        border-radius: 5%;
+      }
+      th {
+        border: 0px;
+      }
+      td {
+        padding-bottom: 10px;
+        border: 0px;
+      }
+    </style>
+    <script type="text/javascript" src="../../js/common.js"></script>
   </head>
   <body>
     <h1 id="ID_TITLE">レゴ写真館</h1>
-    <table width=100%>
-      <tbody>
-        <tr>
-          <th width=30%></th><th></th>
-        </tr>
-        <tr>
-          <td><img width=100% src="./pictures/親子01.jpg" alt="親子写真"></td>
-          <td id="ID_TD">レゴフレンズのエマとレゴディズニーのエリック君です。</td>
-        </tr>
-        <tr>
-          <td><img width=100% src="./pictures/トイストーリー01.jpg" alt="トイストーリー"></td>
-          <td>レゴディズニーのウッディー君とバズ君です。</td>
-        </tr>
-        <tr>
-          <td><img width=100% src="./pictures/泥棒と警察01.jpg" alt="泥棒と警察"></td>
-          <td>警察と逃げる泥棒です。</td>
-        </tr>
-      </tbody>
+    <h2 id="ID_CONTENTS">目次</h2>
+    <div id="ID_CONTENTS_LIST"></div>
+
+    <h2>いろんな写真</h2>
+    <table align="center">
+      <tr><th>ミニフィグたち</th></tr>
+      <tr><td><img src="./pictures/ミニフィグ01.jpg" alt="ミニフィグ"></td></tr>
     </table>
+
+    <h2>レゴクラシック</h2>
+    <table align="center">
+      <tr><th>クレーン君たち</th></tr>
+      <tr><td><img src="./pictures/オリジナル01.jpg" alt="クレーン君たち"></td></tr>
+    </table>
+
+    <h2>アジアンフェスティバル</h2>
+    <table align="center">
+      <tr><th>ドラゴンボート</th></tr>
+      <tr><td><img src="./pictures/ドラゴンボート01.jpg" alt="ドラゴンボート"></td></tr>
+    </table>
+
+    <h2>レゴシティシリーズ</h2>
+    <table align="center">
+      <tr><th>泥棒と警察</th></tr>
+      <tr><td><img src="./pictures/泥棒と警察01.jpg" alt="泥棒と警察"></td></tr>
+    </table>
+
+    <h2>レゴテクニックシリーズ</h2>
+    <table align="center">
+      <tr><th>高所作業車</th></tr>
+      <tr><td><img src="./pictures/高所作業車01.jpg" alt="高所作業車"></td></tr>
+    </table>
+
+    <h2>レゴフレンズシリーズ</h2>
+    <table align="center">
+      <tr><th>親子写真</th></tr>
+      <tr><td><img src="./pictures/親子01.jpg" alt="親子写真"></td></tr>
+    </table>
+
+    <h2>ディズニーシリーズ</h2>
+    <table align="center">
+      <tr><th>ウッディーとバズ</th></tr>
+      <tr><td><img src="./pictures/トイストーリー01.jpg" alt="トイストーリー"></td></tr>
+    </table>
+    <br>
+    <table align="center">
+      <tr><th>アリエル</th></tr>
+      <tr><td><img src="./pictures/アリエル01.jpg" alt="アリエル"></td></tr>
+    </table>
+
+    <script>
+      create_contents_list("ID_CONTENTS_LIST");
+    </script>
 
     <div>
       <hr><br><br>
