--- a/index.html
+++ b/index.html
@@ -26,17 +26,19 @@
       <h1 class="page_title" id="ID_TITLE">レゴで遊ぼう、学ぼう</h1>
     </div>
     <div id="ID_CONTENTS" class="contents_area">
-      <div class="flex_contents_area">
-        <div class="flex_content_area30">
-          <img class="circle" width=100% src="./icon/先生01.jpg" alt="レゴの写真">
-        </div>
-        <div class="flex_content_area70">
-          <p id="ID_P">レゴは子供の知育にいいと言われています。
-          きっと、脳で考えたものを、指先を動かして創り上げていくからでしょう。</p>
-          <p>このサイトは、レゴの作品やレゴで遊んでいるうちに学んだことを共有するページにしたいと思っています。
-          楽しんでいただければ幸いです。</p>
-        </div>
-      </div>
+      <table style="border: 0px;">
+        <tr>
+          <td style="width: 20%; border:0px;">
+            <img class="circle" width=100% src="./icon/先生01.jpg" alt="レゴの写真">
+          </td>
+          <td style="width: 80%; border:0px;">
+            <p id="ID_P">レゴは子供の知育にいいと言われています。
+            きっと、脳で考えたものを、指先を動かして創り上げていくからでしょう。</p>
+            <p>このサイトは、レゴの作品やレゴで遊んでいるうちに学んだことを共有するページにしたいと思っています。
+            楽しんでいただければ幸いです。</p>
+          </td>
+        </tr>
+      </table>
       <hr>
       <div id="ID_TABS" class="tabs">
         <input id="ID_TAB01" type="radio" name="tab_item" checked>
