--- a/contents/html/index.html
+++ b/contents/html/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="ja" dir="ltr" prefix="og: http://ogp.me/ns#">
   <head>
     <link rel="stylesheet" href="../../css/style.css">
     <meta charset="utf-8">
-    <title>サイトマップHTML学習編</title>
+    <title>【レゴ研鑽】サイトマップHTML学習編</title>
+    <meta property="og:title" content="【レゴ研鑽】サイトマップHTML学習編">
+    <meta property="og:type" content="websites">
+    <meta property="og:image" content="https://lego-san.github.io/icon/先生01.jpg">
+    <meta property="og:url" content="https://lego-san.github.io/contents/html">
+    <meta property="og:description" content="レゴを通じて学習したHTML/CSSを紹介してます。">
+    <meta property="og:site_name" content="【レゴ研鑽】Legoで遊びながら学ぶ">
   </head>
   <body>
-    <h1>HTMLを学ぶ</h1>
+    <h1>【レゴ研鑽】サイトマップHTML学習編</h1>
+    <p>レゴを通じて学習したHTML/CSSを紹介してます。
+    本ページはGitHub Pagesで構築されてますので、修正・加筆等あればお気軽にPsuhください。</p>
     <h2>基礎編</h2>
     <ol>
       <li><a href="./step01/index.html">まずはHTMLで文章を書いてみる</a></li>
@@ -19,6 +27,7 @@
       <li><a href="./video/video.html">MP4を再生してみる</a></li>
       <li><a href="./step09/index.html">表を作ってみる</a></li>
       <li><a href="./border_style/border_style.html">いろんな種類の枠線を使ってみる</a></li>
+      <li><a href="./meta_tag/meta_tag.html">Meta Tagについて学んでみる</a></li>
       <li><a href="./reference/index.html">参考ページのリンク集</a></li>
     </ol>
     <h2>トラブルシューティング</h2>
