--- a/contents/images/index_animations.html
+++ b/contents/images/index_animations.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr" prefix="og: http://ogp.me/ns#">
+<html lang="ja" dir="ltr" prefix="og: http://ogp.me/ns#">
   <head>
     <link rel="stylesheet" href="../../css/style.css">
     <meta charset="utf-8">
+    <title>【レゴ研鑽】レゴアニメーション / ストップモーション</title>
+    <meta property="og:title" content="【レゴ研鑽】レゴアニメーション / ストップモーション">
     <meta property="og:type" content="article">
-    <title>Legoを使ってアニメーションを作ってみる</title>
+    <meta property="og:image" content="https://lego-san.github.io/icon/ミニフィグ01.jpg">
+    <meta property="og:url" content="https://lego-san.github.io/contents/images/index_animations.html">
+    <meta property="og:description" content="レゴアニメーション/ストップモーションを紹介してます。">
+    <meta property="og:site_name" content="【レゴ研鑽】Legoで遊びながら学ぶ">
     <style media="screen">
       table {
         border: 3px double black;
@@ -22,8 +27,9 @@
     <script type="text/javascript" src="../../js/common.js"></script>
   </head>
   <body>
-    <h1 id="ID_TITLE">レゴアニメーション</h1>
-    <p>ストップアニメーションと呼ばれている静止画をつなげて作ったアニメーションです。</p>
+    <h1 id="ID_TITLE">【レゴ研鑽】レゴアニメーション/ストップモーション</h1>
+    <p>ストップアニメーションと呼ばれている静止画をつなげて作ったアニメーションです。
+    逐次更新しますので、お楽しみいただければ幸いです。</p>
     <h2 id="ID_CONTENTS">目次</h2>
     <div id="ID_CONTENTS_LIST"></div>
 
