--- a/contents/images/index_pictures.html
+++ b/contents/images/index_pictures.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr" prefix="og: http://ogp.me/ns#">
+<html lang="ja" dir="ltr" prefix="og: http://ogp.me/ns#">
   <head>
     <link rel="stylesheet" href="../../css/style.css">
     <meta charset="utf-8">
+    <title>【レゴ研鑽】レゴ作品集/写真館</title>
+    <meta property="og:title" content="【レゴ研鑽】レゴ作品集/写真館">
     <meta property="og:type" content="article">
-    <title>Legoで写真遊び</title>
+    <meta property="og:image" content="https://lego-san.github.io/icon/ミニフィグ01.jpg">
+    <meta property="og:url" content="https://lego-san.github.io/contents/images/index_pictures.html">
+    <meta property="og:description" content="レゴの作品を紹介してます。">
+    <meta property="og:site_name" content="【レゴ研鑽】Legoで遊びながら学ぶ">
+
     <style media="screen">
       table {
         border: 3px double black;
@@ -21,7 +27,8 @@
     <script type="text/javascript" src="../../js/common.js"></script>
   </head>
   <body>
-    <h1 id="ID_TITLE">レゴ写真館</h1>
+    <h1 id="ID_TITLE">【レゴ研鑽】レゴ作品集/写真館</h1>
+    <p>レゴの作品、写真を紹介してます。</p>
     <h2 id="ID_CONTENTS">目次</h2>
     <div id="ID_CONTENTS_LIST"></div>
 
