--- a/contents/index.html
+++ b/contents/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="ja" dir="ltr" prefix="og: http://ogp.me/ns#">
   <head>
-    <link rel="stylesheet" href="./../css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <meta charset="utf-8">
-    <title>サイトマップ学習編</title>
+    <title>【レゴ研鑽】サイトマップ学習編</title>
+    <meta property="og:title" content="【レゴ研鑽】サイトマップ学習編">
+    <meta property="og:type" content="websites">
+    <meta property="og:image" content="https://lego-san.github.io/icon/先生01.jpg">
+    <meta property="og:url" content="https://lego-san.github.io/contents">
+    <meta property="og:description" content=”サイトマップ学習編。レゴを通じて学習したプログラミング技術(HTML,JavaScript,Python,Githubなど)を紹介してます。プログラミングは初心者から中級者向けの情報です。”>
+    <meta property="og:site_name" content="【レゴ研鑽】Legoで遊びながら学ぶ">
   </head>
   <body>
-    <h1>学びのリンク集</h1>
+    <h1>【レゴ研鑽】学びのリンク集</h1>
+    <p>レゴを通じて学習したプログラミング技術(HTML,JavaScript,Python,Githubなど)を紹介してます。
+    プログラミングは初心者から中級者向けの情報です。</p>
+    <h2>サイトマップ</h2>
     <ol>
       <li><a href="./html/index.html">HTMLを学ぶ</a></li>
       <li><a href="./github_pages/index.html">GitHub Pagesを学ぶ</a></li>
