--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
     <link rel="stylesheet" href="./css/tab.css">
     <script type="text/javascript" src="./js/style.js"></script>
     <meta charset="utf-8">
-    <title>Legoで遊びながら初心者がプログラミングを学ぶ</title>
-    <meta property="og:title" content="Legoで遊びながら初心者がプログラミングを学ぶ">
+    <title>【レゴ研鑽】Legoで遊びながら学ぶ。レゴ作品集と初心者プログラム学習サイト</title>
+    <meta property="og:title" content="【レゴ研鑽】Legoで遊びながら学ぶ。レゴ作品集と初心者プログラム学習サイト">
     <meta property="og:type" content="websites">
     <meta property="og:image" content="https://lego-san.github.io/icon/先生01.jpg">
     <meta property="og:url" content="https://lego-san.github.io/">
-    <meta property="og:description" content=”Lego遊びを通じて写真・Gifアニメーション・HTML・プログラミングを学んでます。プログラミングは初心者から中級者向けの情報です。”>
-    <meta property="og:site_name" content="Legoで遊びながら初心者がプログラミングを学ぶ">
+    <meta property="og:description" content="Lego作品とアニメーションを紹介してます。また、レゴを通じて学習したプログラミング技術(HTML,JavaScript,Python,Githubなど)を紹介してます。プログラミングは初心者から中級者向けの情報です。">
+    <meta property="og:site_name" content="【レゴ研鑽】Legoで遊びながら学ぶ">
     <script data-ad-client="ca-pub-1887985620435579" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </head>
   <body id="ID_BODY">
     <div class="top_area">
-      <h1 class="page_title" id="ID_TITLE">レゴで遊ぼう、学ぼう</h1>
+      <h1 class="page_title" id="ID_TITLE">【レゴ研鑽】レゴで遊ぼう、学ぼう</h1>
     </div>
     <div id="ID_CONTENTS" class="contents_area">
       <table style="border: 0px;">
@@ -32,19 +32,18 @@
             <img class="circle" width=100% src="./icon/先生01.jpg" alt="レゴの写真">
           </td>
           <td style="width: 80%; border:0px;">
-            <p id="ID_P">レゴは子供の知育にいいと言われています。
-            きっと、脳で考えたものを、指先を動かして創り上げていくからでしょう。</p>
-            <p>このサイトは、レゴの作品やレゴで遊んでいるうちに学んだことを共有するページにしたいと思っています。
-            楽しんでいただければ幸いです。</p>
+            <p id="ID_P">Lego作品とレゴアニメーションを紹介してます。
+              また、レゴを通じて学習したプログラミング技術(HTML,JavaScript,Python,Githubなど)を紹介してます。
+              プログラミングは初心者から中級者向けの情報です。<br>楽しんで頂ければ幸いです。</p>
           </td>
         </tr>
       </table>
       <hr>
       <div id="ID_TABS" class="tabs">
         <input id="ID_TAB01" type="radio" name="tab_item" checked>
-        <label id="ID_TAB_NAME" class="tab_item" for="ID_TAB01">遊ぼう</label>
+        <label id="ID_TAB_NAME" class="tab_item" for="ID_TAB01">レゴ研鑽1：遊ぼう</label>
         <input id="ID_TAB02" type="radio" name="tab_item">
-        <label class="tab_item" for="ID_TAB02">学ぼう</label>
+        <label class="tab_item" for="ID_TAB02">レゴ研鑽2：学ぼう</label>
 
         <div class="tab_content" id="ID_TAB01_CONTENTS">
           <div class="tab_content_description">
@@ -75,7 +74,7 @@
               <tbody>
                 <tr>
                     <th style="width: 30%;">HTMLを学ぶ</th>
-                    <th style="width: 30%;">Java Scriptを学ぶ</th>
+                    <th style="width: 30%;">JavaScriptを学ぶ</th>
                     <th style="width: 30%;">その他</th>
                 </tr>
                 <tr>
@@ -93,21 +92,8 @@
 
           </div>
         </div>
-
-      </div>
-
-      <hr>
-      <h2>このページの設定</h2>
-      <div id="ID_NOTE1">
-        <script defer>
-          var id = "ID_NOTE1";
-          var titles = ["tag", "font-size", "height", "font-weight", "border", "width", "margin", "padding"];
-          var targets = ["ID_HTML", "ID_BODY", "ID_TITLE", "ID_P", "ID_TAB_NAME"];
-          check_property(id, titles, targets);
-        </script>
-      </div>
-
-    </div>
+      </div><!--ID_TABS-->
+    </div><!--ID_CONTENTS-->
 
     <div>
       <hr><br><br>
