--- a/privacy_policy/index.html
+++ b/privacy_policy/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html prefix="og: http://ogp.me/ns#" lang="ja" dir="ltr">
   <head>
     <link rel="stylesheet" href="../css/style.css">
     <meta charset="utf-8">
-    <title>Privacy Policy</title>
+    <title>【レゴ研鑽】Privacy Policy</title>
+    <meta property="og:title" content="【レゴ研鑽】Legoで遊びながら学ぶ Privacy Policy">
+    <meta property="og:type" content="article">
+    <meta property="og:image" content="https://lego-san.github.io/icon/先生01.jpg">
+    <meta property="og:url" content="https://lego-san.github.io/privacy_policy">
+    <meta property="og:description" content="本サイトのPrivacy Policyを記載">
+    <meta property="og:site_name" content="【レゴ研鑽】Legoで遊びながら学ぶ">
   </head>
   <body>
     <h1>Privacy Policy</h1>
