--- a/contents/javascript/index.html
+++ b/contents/javascript/index.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="ja" dir="ltr" prefix="og: http://ogp.me/ns#">
   <head>
     <link rel="stylesheet" href="../../css/style.css">
     <meta charset="utf-8">
-    <title>サイトマップJava Script学習編</title>
+    <title>【レゴ研鑽】サイトマップJavaScript学習編</title>
+    <meta property="og:title" content="【レゴ研鑽】サイトマップJavaScript学習編">
+    <meta property="og:type" content="websites">
+    <meta property="og:image" content="https://lego-san.github.io/icon/先生01.jpg">
+    <meta property="og:url" content="https://lego-san.github.io/contents/javascript">
+    <meta property="og:description" content="レゴを通じて学習したJavaScriptを紹介してます。">
+    <meta property="og:site_name" content="【レゴ研鑽】Legoで遊びながら学ぶ">
     <script type="text/javascript" src="../../js/common.js"></script>
   </head>
   <body>
-    <h1>はじめてのJava Script</h1>
+    <h1>【レゴ研鑽】はじめてのJavaScript</h1>
+    <p>HTMLを作りこむのに欠かせないJavaScript。初心者がゼロから学んだ結果を、初心者のためにまとめました。
+      本ページはGitHub Pagesで構築されてますので、修正・加筆等あればお気軽にPsuhください。</p>
     <ol>
       <li><a href="./html/step01.html">はじめてのJavaScript</a></li>
       <li><a href="./html/step02.html">JavaScriptファイルの読み込み</a></li>
-      <li><a href="./html/step03.html">Java Scriptを使ったHTMLフッター</a></li>
-      <li><a href="./html/step04.html">Java Scriptを使ったHTML目次生成</a></li>
-      <li><a href="./html/step05.html">Java Scriptを使ったMETAタグ生成</a></li>
+      <li><a href="./html/step03.html">JavaScriptを使ったHTMLフッター</a></li>
+      <li><a href="./html/step04.html">JavaScriptを使ったHTML目次生成</a></li>
+      <li><a href="./html/step05.html">JavaScriptを使ったMETAタグ生成</a></li>
     </ol>
 
     <div id="ID_FOOTER">
