--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
                     <th style="width: 50%;">レゴアニメーション</th>
                 </tr>
                 <tr>
-                  <td><a href="./contents/images/index_pictures.html"><img width=100% src="./contents/images/pictures/ミニフィグ01.jpg" alt="泥棒と警察"></a></td>
-                  <td><a href="./contents/images/index_animations.html"><img width=100% src="./contents/images/animations/フェイス01.gif" alt="フェイス"></a></td>
+                  <td><a href="./contents/images/index.html"><img width=100% src="./contents/images/jpg/ミニフィグ01.jpg" alt="泥棒と警察"></a></td>
+                  <td><a href="./contents/animations/index.html"><img width=100% src="./contents/animations/gif/フェイス01.gif" alt="フェイス"></a></td>
                 </tr>
                 <tr>
-                  <td style="text-align:center;"><a href="./contents/images/index_pictures.html">入口</a></td>
-                  <td style="text-align:center;"><a href="./contents/images/index_animations.html">入口</a></td>
+                  <td style="text-align:center;"><a href="./contents/images/index.html">入口</a></td>
+                  <td style="text-align:center;"><a href="./contents/animations/index.html">入口</a></td>
                 </tr>
               </tbody>
             </table>
@@ -78,9 +78,9 @@
                     <th style="width: 30%;">その他</th>
                 </tr>
                 <tr>
-                  <td><a href="./contents/html/index.html"><img width=100% src="./contents/images/pictures/オリジナル01.jpg" alt="html"></a></td>
-                  <td><a href="./contents/javascript/index.html"><img width=100% src="./contents/images/pictures/ドラゴンボート01.jpg" alt="javascript"></a></td>
-                  <td><a href="./contents/index.html"><img width=100% src="./contents/images/pictures/泥棒と警察01.jpg" alt="その他"></a></td>
+                  <td><a href="./contents/html/index.html"><img width=100% src="./contents/images/jpg/オリジナル01.jpg" alt="html"></a></td>
+                  <td><a href="./contents/javascript/index.html"><img width=100% src="./contents/images/jpg/ドラゴンボート01.jpg" alt="javascript"></a></td>
+                  <td><a href="./contents/index.html"><img width=100% src="./contents/images/jpg/泥棒と警察01.jpg" alt="その他"></a></td>
                 </tr>
                 <tr>
                   <td style="text-align:center;"><a href="./contents/html/index.html">入口</a></td>
