--- a/contents/javascript/index.html
+++ b/contents/javascript/index.html
@@ -22,6 +22,7 @@
       <li><a href="./html/step03.html">JavaScriptを使ったHTMLフッター</a></li>
       <li><a href="./html/step04.html">JavaScriptを使ったHTML目次生成</a></li>
       <li><a href="./html/step05.html">JavaScriptを使ったMETAタグ生成</a></li>
+      <li><a href="./html/step06_animation.html">JavaScriptを使ったアニメーション</a></li>
     </ol>
 
     <div id="ID_FOOTER">
