--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body id="ID_BODY">
     <div class="top_area">
-      <h1 class="page_title" id="ID_TITLE">【レゴ研鑽】レゴで遊ぼう、学ぼう</h1>
+      <h1 class="page_title" id="ID_TITLE">【レゴ研鑽】<br>レゴで遊ぼう、学ぼう</h1>
     </div>
     <div id="ID_CONTENTS" class="contents_area">
       <table style="border: 0px;">
@@ -33,7 +33,7 @@
           </td>
           <td style="width: 80%; border:0px;">
             <p id="ID_P">Lego作品とレゴアニメーションを紹介してます。
-              また、レゴを通じて学習したプログラミング技術(HTML,JavaScript,Python,Githubなど)を紹介してます。
+              また、レゴを通じて学習したプログラミング技術(HTML、avaScript、Python、Githubなど)を紹介してます。
               プログラミングは初心者から中級者向けの情報です。<br>楽しんで頂ければ幸いです。</p>
           </td>
         </tr>
@@ -51,7 +51,7 @@
             <table style="width:80%;">
               <tbody>
                 <tr>
-                    <th style="width: 50%;">レゴ写真館</th>
+                    <th style="width: 50%;">レゴ作品/写真館</th>
                     <th style="width: 50%;">レゴアニメーション</th>
                 </tr>
                 <tr>
@@ -94,6 +94,19 @@
         </div>
       </div><!--ID_TABS-->
     </div><!--ID_CONTENTS-->
+
+    <!--
+    <hr>
+    <h2>このページの設定</h2>
+    <div id="ID_NOTE1">
+      <script defer>
+        var id = "ID_NOTE1";
+        var titles = ["tag", "font-size", "height", "font-weight", "border", "width", "margin", "padding"];
+        var targets = ["ID_HTML", "ID_BODY", "ID_TITLE", "ID_P", "ID_TAB_NAME"];
+        check_property(id, titles, targets);
+      </script>
+    </div>
+    -->
 
     <div>
       <hr><br><br>
