--- a/contents/html/index.html
+++ b/contents/html/index.html
@@ -28,6 +28,7 @@
       <li><a href="./step09/index.html">表を作ってみる</a></li>
       <li><a href="./border_style/border_style.html">いろんな種類の枠線を使ってみる</a></li>
       <li><a href="./meta_tag/meta_tag.html">Meta Tagについて学んでみる</a></li>
+      <li><a href="./code/code.html">HTMLを使ったソースコードの表現方法</a></li>
       <li><a href="./reference/index.html">参考ページのリンク集</a></li>
     </ol>
     <h2>トラブルシューティング</h2>
