--- a/contents/html/meta_tag/meta_tag.html
+++ b/contents/html/meta_tag/meta_tag.html
@@ -134,12 +134,9 @@
 
 
     <h2>今回作成したページのHTMLコード</h2>
-    <p>実際に作成したページは<a href="../item.html">こちら</a></p>
+    <p>実際に作成したページは<a href="../step/step11.html">こちら</a></p>
     <img style="width:300px;" src="../../../icon/先生02.jpg" alt="こちら">
-    <p>HTMLコードは<a href="https://github.com/lego-san/lego-san.github.io/blob/master/contents/html/step06/step06.html">こちら</a></p>
-
-    <h2 id="ID_COMMENT">感想</h2>
-    <p>xxxx</p>
+    <p>HTMLコードは<a href="https://github.com/lego-san/lego-san.github.io/blob/master/contents/html/step/step11.html">こちら</a></p>
 
     <div id="ID_FOOTER"></div>
 
