--- a/contents/html/index.html
+++ b/contents/html/index.html
@@ -17,7 +17,7 @@
     本ページはGitHub Pagesで構築されてますので、修正・加筆等あればお気軽にPsuhください。</p>
     <h2>基礎編</h2>
     <ol>
-      <li><a href="./step01/index.html">まずはHTMLで文章を書いてみる</a></li>
+      <li><a href="./tutorial/tutorial.html">まずはHTMLで文章を書いてみる</a></li>
       <li><a href="./step02/index.html">文字に色を付けてみる</a></li>
       <li><a href="./step03/index.html">色について学んでみる</a></li>
       <li><a href="./step04/index.html">文字サイズについて学んでみる</a></li>
