--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="tab_content" id="ID_TAB01_CONTENTS">
           <div class="tab_content_description">
             <h2>レゴで遊ぼうコンテンツ</h2>
-            <table style="width:80%;">
+            <table align="center" style="width:80%;">
               <tbody>
                 <tr>
                     <th style="width: 50%;">レゴ作品/写真館</th>
@@ -70,7 +70,7 @@
         <div class="tab_content" id="ID_TAB02_CONTENTS">
           <div class="tab_content_description">
             <h2>レゴで学ぼうコンテンツ</h2>
-            <table style="width:80%;">
+            <table align="center" style="width:80%;">
               <tbody>
                 <tr>
                     <th style="width: 30%;">HTMLを学ぶ</th>
