--- a/contents/html/index.html
+++ b/contents/html/index.html
@@ -17,9 +17,9 @@
     本ページはGitHub Pagesで構築されてますので、修正・加筆等あればお気軽にPsuhください。</p>
     <h2>基礎編</h2>
     <ol>
-      <li><a href="./tutorial/tutorial.html">まずはHTMLで文章を書いてみる</a></li>
-      <li><a href="./step02/index.html">文字に色を付けてみる</a></li>
-      <li><a href="./step03/index.html">色について学んでみる</a></li>
+      <li><a href="./tutorial/tutorial.html">はじめの一歩。まずはHTMLで文章を書いてみる</a></li>
+      <li><a href="./style/style.html">Styleとは。文字を装飾してみる</a></li>
+      <li><a href="./color/color.html">色について学んでみる</a></li>
       <li><a href="./step04/index.html">文字サイズについて学んでみる</a></li>
       <li><a href="./step05/index.html">レイアウトについて学んでみる</a></li>
       <li><a href="./step06/index.html">画像の張り方について学んでみる</a></li>
