--- a/contents/html/tutorial/tutorial.html
+++ b/contents/html/tutorial/tutorial.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="【レゴ研鑽】HTMLを使ってみる">
     <meta property="og:type" content="article">
     <meta property="og:image" content="https://lego-san.github.io/icon/先生01.jpg">
-    <meta property="og:url" content="https://lego-san.github.io/contents/html/tutorial.html">
+    <meta property="og:url" content="https://lego-san.github.io/contents/html/tutorial/tutorial.html">
     <meta property="og:description" content="HTML初心者のための第1歩。まずは文章を書いてみるところから始めます。">
     <meta property="og:site_name" content="【レゴ研鑽】Legoで遊びながら学ぶ">
     <script type="text/javascript" src="../../../js/common.js"></script>
@@ -194,7 +194,7 @@
 
     <h2>サンプルHTMLへのリンク</h2>
     <p>サンプルページは<a href="../step/step01_tutorial.html">こちら</a>から確認できます。</p>
-    <img class="w300" src="../../../icon/先生02.jpg" alt="こちら">
+    <img style="width:300px;" src="../../../icon/先生02.jpg" alt="こちら">
     <p>HTMLファイルは<a href="https://github.com/lego-san/lego-san.github.io/blob/master/contents/html/step/step01_tutorial.html">こちら</a>からダウンロードしてください。</p>
 
     <h2 id="ID_COMMENT">感想</h2>
