--- a/contents/html/step/step02_style.html
+++ b/contents/html/step/step02_style.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="ja" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>レゴで遊んで学ぶ</title>
   </head>
   <body>
-    <p><font color="red">レゴ</font>で遊んだ写真を掲載します。</p>
+    <p><span style="color: red;">レゴ</span>で遊んだ写真を掲載します。</p>
   </body>
 </html>
