--- a/index.html
+++ b/index.html
@@ -51,15 +51,18 @@
             <table align="center" style="width:80%;">
               <tbody>
                 <tr>
-                    <th style="width: 50%;">レゴ作品/写真館</th>
-                    <th style="width: 50%;">レゴアニメーション</th>
+                    <th style="width: 30%;">レゴ写真館</th>
+                    <th style="width: 30%;">レゴ作品集</th>
+                    <th style="width: 30%;">レゴアニメーション</th>
                 </tr>
                 <tr>
-                  <td><a href="./contents/images/index.html"><img width=100% src="./contents/images/jpg/ミニフィグ01.jpg" alt="泥棒と警察"></a></td>
+                  <td><a href="./contents/images/minifigs/minifigs.html"><img width=100% src="./icon/ミニフィグ01.jpg" alt="ミニフィグ"></a></td>
+                  <td><a href="./contents/images/pictures/pictures.html"><img width=100% src="./icon/作品01.jpg" alt="レゴ作品"></a></td>
                   <td><a href="./contents/animations/index.html"><img width=100% src="./contents/animations/gif/フェイス01.gif" alt="フェイス"></a></td>
                 </tr>
                 <tr>
-                  <td style="text-align:center;"><a href="./contents/images/index.html">入口</a></td>
+                  <td style="text-align:center;"><a href="./contents/images/minifigs/minifigs.html">入口</a></td>
+                  <td style="text-align:center;"><a href="./contents/images/pictures/pictures.html">入口</a></td>
                   <td style="text-align:center;"><a href="./contents/animations/index.html">入口</a></td>
                 </tr>
               </tbody>
