--- a/contents/html/code/code.html
+++ b/contents/html/code/code.html
@@ -21,7 +21,7 @@
   <body>
     <h1 id="ID_TITLE">【レゴ研鑽】HTMLを使ったソースコードの表現方法</h1>
     <p>HTMLを使ったソースコードの表現方法を紹介します。<br>
-      本ページはGitHub Pagesで構築されてますので、修正・加筆等あればお気軽にPsuhください。</p>
+      本ページはGitHub Pagesで構築されてますので、修正・加筆等あればお気軽にPushください。</p>
 
     <h2 id="ID_CONTENTS">目次</h2>
     <div id="ID_CONTENTS_LIST"></div>
