--- a/contents/html/index.html
+++ b/contents/html/index.html
@@ -14,7 +14,7 @@
   <body>
     <h1>【レゴ研鑽】サイトマップHTML学習編</h1>
     <p>レゴを通じて学習したHTML/CSSを紹介してます。
-    本ページはGitHub Pagesで構築されてますので、修正・加筆等あればお気軽にPsuhください。</p>
+    本ページはGitHub Pagesで構築されてますので、修正・加筆等あればお気軽にPushください。</p>
     <h2>基礎編</h2>
     <ol>
       <li><a href="./tutorial/tutorial.html">はじめの一歩。まずはHTMLで文章を書いてみる</a></li>
@@ -30,6 +30,7 @@
       <li><a href="./meta_tag/meta_tag.html">Meta Tagについて学んでみる</a></li>
       <li><a href="./code/code.html">HTMLを使ったソースコードの表現方法</a></li>
       <li><a href="./list/list.html">リストについて学んでみる</a></li>
+      <li><a href="./input_form/input_form.html">入力フォームについて学んでみる</a></li>
       <li><a href="../reference/index.html">参考ページのリンク集</a></li>
     </ol>
     <h2>トラブルシューティング</h2>
