--- a/contents/html/list/list.html
+++ b/contents/html/list/list.html
@@ -20,7 +20,7 @@
   <body>
     <h1 id="ID_TITLE">【レゴ研鑽】リストについて学んでみる</h1>
     <p>箇条書きや、項目を一覧として表示するときに<span class="red">リスト</span>が使えると便利です。本サイトでは目次を生成するときのもリストを使用しています。
-      <br>本ページはGitHub Pagesで構築されてますので、修正・加筆等あればお気軽にPsuhください。</p>
+      <br>本ページはGitHub Pagesで構築されてますので、修正・加筆等あればお気軽にPushください。</p>
 
     <h2 id="ID_CONTENTS">目次</h2>
     <div id="ID_CONTENTS_LIST"></div>
