--- a/contents/images/index.html
+++ b/contents/images/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="【レゴ研鑽】レゴ作品集/レゴ写真館">
     <meta property="og:type" content="websites">
     <meta property="og:image" content="https://lego-san.github.io/icon/先生01.jpg">
-    <meta property="og:url" content="https://lego-san.github.io/contents">
+    <meta property="og:url" content="https://lego-san.github.io/contents/images">
     <meta property="og:description" content="レゴを通じて学習したJavaScriptを紹介してます。">
     <meta property="og:site_name" content="【レゴ研鑽】Legoで遊びながら学ぶ">
     <script type="text/javascript" src="../../js/common.js"></script>
@@ -20,7 +20,7 @@
   <body>
     <h1>【レゴ研鑽】レゴ写真館/レゴ作品集</h1>
     <p>レゴの写真を掲載してます。レゴ写真館ではレゴミニフィグ写真を100体以上掲載してます。
-      <br>本ページはGitHub Pagesで構築されてますので、修正・加筆等あればお気軽にPsuhください。</p>
+      <br>本ページはGitHub Pagesで構築されてますので、修正・加筆等あればお気軽にPushください。</p>
 
     <table>
       <tr>
