--- a/contents/images/minifigs/minifigs.html
+++ b/contents/images/minifigs/minifigs.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="【レゴ研鑽】レゴミニフィグ写真館">
     <meta property="og:type" content="article">
     <meta property="og:image" content="https://lego-san.github.io/icon/ミニフィグ01.jpg">
-    <meta property="og:url" content="https://lego-san.github.io/contents">
+    <meta property="og:url" content="https://lego-san.github.io/contents/minifigs">
     <meta property="og:description" content=”約100体のミニフィグ写真を掲載してます。お好みのミニフィグが1体くらいはあるかと思います。お楽しみください。”>
     <meta property="og:site_name" content="【レゴ研鑽】Legoで遊びながら学ぶ">
     <script type="text/javascript" src="../../../js/common.js"></script>
