--- a/contents/javascript/html/step06_animation.html
+++ b/contents/javascript/html/step06_animation.html
@@ -22,7 +22,7 @@
   <body>
     <h1 id="ID_TITLE">【レゴ研鑽】JavaScriptを使ったアニメーション</h1>
     <p>JavaScriptを使ったアニメーションを紹介します。
-      <br>本ページはGitHub Pagesで構築されてますので、修正・加筆等あればお気軽にPsuhください。</p>
+      <br>本ページはGitHub Pagesで構築されてますので、修正・加筆等あればお気軽にPushください。</p>
 
     <h2 id="ID_CONTENTS">目次</h2>
     <div id="ID_CONTENTS_LIST"></div>
