--- a/contents/html/step/step05.html
+++ b/contents/html/step/step05.html
@@ -25,7 +25,7 @@
         width: 100%;
       }
     </style>
-    <script type="text/javascript" src="../../js/style.js"></script>
+    <script type="text/javascript" src="../../javascript/js/check_property.js"></script>
     <meta charset="utf-8">
     <title></title>
   </head>
