--- a/contents/html/step05/index.html
+++ b/contents/html/step05/index.html
@@ -11,7 +11,7 @@
       }
     </style>
     <link rel="stylesheet" href="../../../css/style.css">
-    <script type="text/javascript" src="../../../js/style.js"></script>
+    <script type="text/javascript" src="../../javascript/js/check_property.js"></script>
     <meta charset="utf-8">
     <title>HTMLのmarginとpaddingの違い</title>
   </head>
