--- a/contents/javascript/index.html
+++ b/contents/javascript/index.html
@@ -15,7 +15,7 @@
   <body>
     <h1>【レゴ研鑽】はじめてのJavaScript</h1>
     <p>HTMLを作りこむのに欠かせないJavaScript。初心者がゼロから学んだ結果を、初心者のためにまとめました。
-      本ページはGitHub Pagesで構築されてますので、修正・加筆等あればお気軽にPsuhください。</p>
+      本ページはGitHub Pagesで構築されてますので、修正・加筆等あればお気軽にPushください。</p>
     <ol>
       <li><a href="./html/step01.html">はじめてのJavaScript</a></li>
       <li><a href="./html/step02.html">JavaScriptファイルの読み込み</a></li>
@@ -23,6 +23,7 @@
       <li><a href="./html/step04.html">JavaScriptを使ったHTML目次生成</a></li>
       <li><a href="./html/step05.html">JavaScriptを使ったMETAタグ生成</a></li>
       <li><a href="./html/step06_animation.html">JavaScriptを使ったアニメーション</a></li>
+      <li><a href="./html/step07_property.html">JavaScriptを使った情報収集(開発者向け)</a></li>
     </ol>
 
     <div id="ID_FOOTER">
