--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <div>
       <hr><br><br>
-      <p id="ID_FOOTER" class="guide_area_bottom">[<a href="#ID_CONTENTS">ページ上に戻る</a>] / [<a href="./privacy_policy/index.html">プライバシーポリシー</a>]</p>
+      <p id="ID_FOOTER" class="guide_area_bottom">[<a href="#ID_CONTENTS">ページ上に戻る</a>] / [<a href="./privacy_policy/index.html">プライバシーポリシー</a>] / [<a href="https://docs.google.com/forms/d/e/1FAIpQLSez3uVXuSNpk3o6D9FngnFNTqTfs0DZeaFhKLTO_GNxZ-P9gg/viewform">お問い合わせ</a>]</p>
     </div>
   </body>
 </html>
