--- a/contents/html/index.html
+++ b/contents/html/index.html
@@ -25,7 +25,7 @@
       <li><a href="./step06/index.html">画像の張り方について学んでみる</a></li>
       <li><a href="./step07/index.html">GIFアニメーションを張り付けてみる</a></li>
       <li><a href="./video/video.html">MP4を再生してみる</a></li>
-      <li><a href="./step09/index.html">表を作ってみる</a></li>
+      <li><a href="./table/table.html">表を作ってみる</a></li>
       <li><a href="./border_style/border_style.html">いろんな種類の枠線を使ってみる</a></li>
       <li><a href="./meta_tag/meta_tag.html">Meta Tagについて学んでみる</a></li>
       <li><a href="./code/code.html">HTMLを使ったソースコードの表現方法</a></li>
