--- a/contents/html/table/table.html
+++ b/contents/html/table/table.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr" prefix="og: http://ogp.me/ns#">
+<html lang="ja" dir="ltr" prefix="og: http://ogp.me/ns#">
   <head>
     <link rel="stylesheet" href="../../../css/style.css">
     <meta charset="utf-8">
     <meta property="og:type" content="article">
     <title>HTMLのtableの使い方</title>
+    <title>【レゴ研鑽】HTMLのtableの使い方</title>
+    <meta property="og:title" content="【レゴ研鑽】HTMLのtableの使い方">
+    <meta property="og:type" content="article">
+    <meta property="og:image" content="https://lego-san.github.io/icon/先生01.jpg">
+    <meta property="og:url" content="https://lego-san.github.io/contents/html/table/table.html">
+    <meta property="og:description" content=”Lego遊びを通じて様々なことを学びます。”>
+    <meta property="og:site_name" content="【レゴ研鑽】Legoで遊びながら学ぶ">
+    <script type="text/javascript" src="../../../js/common.js"></script>
+
   </head>
   <body>
-    <h1 id="ID_TITLE">表を作ってみる</h1>
+    <h1 id="ID_TITLE">【レゴ研鑽】HTMLのtableの使い方</h1>
+
     <h2 id="ID_CONTENTS">目次</h2>
-    <ol>
-      <li><a href="#ID_H2_01">1x1の表</a></li>
-      <li><a href="#ID_H2_02">1x2の表</a></li>
-      <li><a href="#ID_H2_03">2x2の表</a></li>
-      <li><a href="#ID_H2_04">表のタイトルを入れてみる</a></li>
-      <li><a href="#ID_SRC">今回作成したページのHTMLコード</a></li>
-    </ol>
+    <div id="ID_CONTENTS_LIST"></div>
 
     <h2 id="ID_H2_01">1x1の表</h2>
     <p>1x1の表はこのように書きます。</p>
@@ -112,10 +116,12 @@
     <img style="width:300px;" src="../../../icon/先生02.jpg" alt="こちら">
     <p>HTMLコードは<a href="https://github.com/lego-san/lego-san.github.io/blob/master/contents/html/step/step09.html">こちら</a></p>
 
-    <div>
-      <hr><br><br>
-      <p class="guide_area_bottom">[<a href="#ID_TITLE">ページ上に戻る</a>] / [<a href="#ID_CONTENTS">目次に戻る</a>] / [<a href="../../../index.html">HOMEへ戻る</a>]</p>
-    </div>
+    <div id="ID_FOOTER"></div>
+
+    <script>
+      create_contents_list("ID_CONTENTS_LIST");
+      create_footer("ID_FOOTER",3);
+    </script>
 
   </body>
 </html>
