--- a/contents/javascript/html/step07_property.html
+++ b/contents/javascript/html/step07_property.html
@@ -19,6 +19,7 @@
       }
       button {
         margin: 5px;
+        font-size: 30px;
       }
     </style>
   </head>
@@ -26,24 +27,34 @@
     <div id="ID_HEADER" class="top_area">
 
       <h1 id="ID_TITLE">【レゴ研鑽】JavaScriptを使った情報収集</h1>
-      <p id="ID_P">JavaScriptを使ってスクリーンサイズ、ウインドウサイズ、タグ情報、ナビゲーション情報などを取得します。JavaScriptを参照されたい方はこちら(
+      <p id="ID_P">JavaScriptを使ってスクリーンサイズ、ウインドウサイズ、タグ情報、ナビゲーション情報などを取得します。
+        JavaScriptを参照されたい方はこちら(
         <a href="https://github.com/lego-san/lego-san.github.io/blob/master/contents/javascript/js/check_property.js">GitHub</a>)をご確認ください。
+        新規ウインドウ生成ボタンを作成しました。PCでスマホ幅に合わせたい方はこちらをご利用ください。
         <br>情報収集本ページはGitHub Pagesで構築されてますので、修正・加筆等あればお気軽にPushください。</p>
 
       <h2>プロパティの取得</h2>
       <form>
-        <button style="font-size: 30px;" type="button" name="window" onclick="check_window_size('ID_CONTENTS');">Screen/Window/HTMLサイズの取得</button><br>
-        <button style="font-size: 30px;" type="button" name="tag" onclick="check_tag_property('ID_CONTENTS');">タグプロパティの取得</button>
-        <button style="font-size: 30px;" type="button" name="tag" onclick="check_tag_position('ID_CONTENTS');">タグポジションの取得</button><br>
-        <button style="font-size: 30px;" type="button" name="tag" onclick="check_navigator_property('ID_CONTENTS');">ナビゲーションプロパティの取得</button>
-        <button style="font-size: 30px;" type="button" name="tag" onclick="check_location_property('ID_CONTENTS');">ロケーションプロパティの取得</button><br>
-        <button style="font-size: 30px;" type="button" name="all" onclick="check_all_property('ID_CONTENTS');">一括取得</button>
-        <button type="button" name="reset" onclick="location.reload();">Reset</button>
+        <button type="button" name="window" onclick="check_window_size('ID_CONTENTS');">各種ウインドウサイズの取得</button><br>
+        <button type="button" name="tag_property" onclick="check_tag_property('ID_CONTENTS');">タグプロパティの取得</button>
+        <button type="button" name="tag_position" onclick="check_tag_position('ID_CONTENTS');">タグポジションの取得</button><br>
+        <button type="button" name="navigation_property" onclick="check_navigator_property('ID_CONTENTS');">ナビゲーションプロパティの取得</button>
+        <button type="button" name="location_property" onclick="check_location_property('ID_CONTENTS');">ロケーションプロパティの取得</button><br>
+        <button type="button" name="all" onclick="check_all_property('ID_CONTENTS');">一括取得</button>
+        <button type="button" name="reset" onclick="location.reload();">Reset</button><br>
       </form>
       <hr>
     </div>
 
-    <div id="ID_CONTENTS"></div>
+    <div id="ID_CONTENTS">
+      <form>
+        <label for="myWidth">新規ウインドウ：width=</label>
+        <input style="font-size: 30px; width: 100px; text-align:right;" type="text" name="myWidth" value="980">
+        <label for="myWidth">px</label>
+        <button type="button" name="set_window" onclick="set_window_size(myWidth.value);">生成</button>
+      </form>
+      <hr>
+    </div>
 
     <div id="ID_FOOTER"></div>
 
